--- a/resources/less/mod-blog.less
+++ b/resources/less/mod-blog.less
@@ -15,7 +15,7 @@
 .publication-card-container {
     display: grid;
     grid-template: 1fr auto / auto 1fr;
-    border: 1px solid @WEB_NAV_BG_COLOR;
+    background: @WEB_BG_CARD;
     padding: 10px;
 }
 .publication-card-img-container{
