--- a/resources/less/mod-footer.less
+++ b/resources/less/mod-footer.less
@@ -6,6 +6,7 @@
     grid-row: 2 / 3;
     background-color: @WEB_NAV_BG_COLOR;
     color:@WEB_FG_COLOR;
+    // box-shadow: 0px -10px 10px 0px;
 }
 #social-media-links{
     display:grid;
