--- a/resources/less/mod-form.less
+++ b/resources/less/mod-form.less
@@ -13,8 +13,10 @@
 }
 
 .form-label {
+    font-size: @subtitle-font-size;
+    font-weight: bold;
+    color: @complement-color;
     display: inline-block;
-    .subtitle;
     margin: 10px 0 0 0;
     width: 90%;
 }
