--- a/resources/less/mod-notification.less
+++ b/resources/less/mod-notification.less
@@ -13,7 +13,9 @@
 }
 
 .notification-message {
-    .subtitle;
+    font-size: @subtitle-font-size;
+    font-weight: bold;
+    color: @complement-color;
 }
 
 .warning {
