--- a/resources/less/mod-header.less
+++ b/resources/less/mod-header.less
@@ -8,6 +8,7 @@
     display:grid;
     grid-template: minmax(auto,100px) auto / auto;
     grid-auto-rows: 50px;
+    // box-shadow: 0px -10px 10px 0px;
 
     position: sticky;
     top: 0;
