[Refactor] Blog | Post Layout

--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -20,6 +20,7 @@
 @WEB_SECTION_COLOR: #2BA3FF;
 @WEB_BUTTON_COLOR: #0E214D;
 @WEB_BUTTON_COLOR_2: #0A1C47;
+@WEB_CARD_BG:#e0f2fd;
 @WEB_BG_CARD: rgba(10, 28, 71, 0.1);
 
 
@@ -155,7 +156,7 @@
 @import 'mod-header.less';
 @import 'mod-main.less';
 @import 'mod-publication.less';
-@import 'mod-blog.less';
+@import 'mod-post.less';
 @import 'mod-sidebar.less';
 @import 'mod-footer.less';
 @import 'mod-rating.less';
