--- a/resources/less/mod-main.less
+++ b/resources/less/mod-main.less
@@ -15,9 +15,11 @@
     overflow-y: scroll;
 }
 .section-title {
-    background-color: @WEB_SECTION_COLOR;
-    padding: 15px;
-    margin: 0 0 20px 0;
+    background: @WEB_BUTTON_COLOR;
+    padding: 10px 20px;
+    margin: 0 0 10px 0;
+    color: @WEB_NAV_FONT_COLOR;
+    /* box-shadow: 0px 1px 5px -1px #000a; */
 }
 /* # # # # # # # # # # # # # */
 /*  B R E A D C R U M B S    */
