--- a/resources/less/mod-publication.less
+++ b/resources/less/mod-publication.less
@@ -1,41 +1,101 @@
-/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-============================== P U B L I C A T I O N ===========================
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
-.publication-container{
-    background: rgba(10, 28, 71, 0.1);
+/* # # # # # # # # # # # # # */
+/*   P U B L I C A T I O N   */
+/* v v v v v v v v v v v v v */
+
+
+/* # # # # # # # # # # # # # */
+/*   G E N E R I C  C A R D  */
+/* v v v v v v v v v v v v v */
+.publication-section-container {
+    margin: 20px;
     padding: 20px;
-    // margin: auto;
-    // width: 90%;
-    // max-width: 800px;
+    max-width: 750px;
+    display: grid;
+    grid-template: auto auto / auto;
+    grid-row-gap: 50px;
 }
-.publication-title {
-    font-size: @title-font-size;
-    font-weight: bold;
-    color: @complement-color;
+.publication-card-container {
+    display: grid;
+    grid-template: 1fr auto / auto 1fr;
+    background: @WEB_CARD_BG;
+    padding: 10px;
 }
-.publication-meta{
-    margin: 0 0 10px 0 ;
+.publication-card-img-container{
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
 }
-
-.publication-author {
-    font-size: @subtitle-font-size;
-    color: @complement-color;
+.publication-card-description-container{
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    padding: 0 0 0 15px;
+    display: grid;
+    grid-template: 'title title title'
+                    'prev prev prev'
+                    'author rate rate'
+                    'date tags tags'
 }
-
-.publication-date {
-    font-weight: normal;
-    margin: 0;
-    color: @complement-color;
+.publication-card-title{
+    grid-area: title;
 }
-
-.publication-rating {
-    // margin: 10px 0;
+.publication-card-preview{
+    grid-area: prev;
 }
-
-.rate {
-    color: #fd4;
+.publication-card-author{
+    grid-area: author;
 }
-
+.publication-card-date{
+    grid-area: date;
+}
+.publicaction-card-rating-container{
+    grid-area: rate;
+}
+.publication-card-tags-container{
+    grid-area: tags;
+}
+.publication-card-button-container{
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    padding: 10px;
+    margin: 10px 0 0 0;
+    background-color: @WEB_SECTION_COLOR;
+    text-align: center;
+    a{
+        text-decoration:none;
+        color: @WEB_BUTTON_COLOR;
+    }
+    a:hover{
+        text-decoration: underline;
+    }
+}
+/* # # # # # # # # # # # # # */
+/*    L A R G E   C A R D    */
+/* v v v v v v v v v v v v v */
+.large-size-publication{
+    img {
+        .image-disposition(250px, 250px);
+    }
+}
+/* # # # # # # # # # # # # # */
+/*    S M A L L   C A R D    */
+/* v v v v v v v v v v v v v */
+.small-size-publication{
+    img {
+        .image-disposition(150px, 150px);
+    }
+}
+/* # # # # # # # # # # # # # */
+/*    C A R D   L I S T      */
+/* v v v v v v v v v v v v v */
+.publication-card-list {
+    display: grid;
+    list-style: none;
+    grid-template: auto / 1fr 1fr;
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
+}
+/* # # # # # # # # # # # # # # # #  */
+/* G E N E R I C   E L E M E N T S  */
+/* v v v v v v v v v v v v v v v v  */
 .tag {
     display: inline-block;
     padding: 5px;
@@ -44,61 +104,13 @@
     font-size: 12px;
     text-decoration: none;
 }
-.publication-body{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin: 10px 0;
+.rate-container {
+    margin: 0;
 }
-.publication-img-container{
-    overflow: hidden;
-    margin:10px auto;
-    img{
-        .image-disposition(100%, 300px);
-    }
+.rate {
+    color: #fd4;
 }
-.publication-paragraph{
-    margin: 20px 0;
-    font-size: @paragraph-font-size;
-    color: @complement-color;
-    letter-spacing: .2px;
-    text-align: justify;
-    font-stretch: wider;
-}
+
 /* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 ======================== M E D I A   Q U E R I E S ============================
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
-
-@media screen and (min-width:700px) {
-    .publication-meta {
-        display: grid;
-        grid-template: "author rating" "date tags";
-    }
-
-    .publication-author {
-        grid-area: author;
-    }
-
-    .publication-date {
-        grid-area: date;
-    }
-
-    .publication-rating {
-        text-align: end;
-        grid-area: rating;
-    }
-
-    .tags-container {
-        text-align: end;
-        grid-area: tags;
-    }
-    .publication-img-container > img{
-        .image-disposition(600px, 400px);
-    }
-}
-@media screen and (min-width:1500px) {
-    .publication-img-container > img{
-        .image-disposition(100%, 500px);
-    }
-}
-
