--- a/resources/less/mod-main.less
+++ b/resources/less/mod-main.less
@@ -19,6 +19,7 @@
     padding: 10px 20px;
     margin: 0 0 10px 0;
     color: @WEB_NAV_FONT_COLOR;
+    font-weight: lighter;
     /* box-shadow: 0px 1px 5px -1px #000a; */
 }
 /* # # # # # # # # # # # # # */
