--- a/resources/less/mod-post.less
+++ b/resources/less/mod-post.less
@@ -12,7 +12,8 @@
 }
 .post-meta{
     display: grid;
-    grid-template: 'author rate' 'date tags';
+    grid-template: 'author a a a a rate'
+                   'date   a a a a tags';
     margin: 10px 0;
 }
 .post-author {
