--- a/resources/less/mod-publication.less
+++ b/resources/less/mod-publication.less
@@ -1,8 +1,22 @@
 /* # # # # # # # # # # # # # */
 /*   P U B L I C A T I O N   */
 /* v v v v v v v v v v v v v */
-
-
+.publication-container{
+    background: @WEB_CARD_BG;
+    padding: 20px;
+}
+.publication-img-container{
+    overflow: hidden;
+    img{
+        .image-disposition(100%, 500px);
+        object-fit: fill !important;
+        margin:10px auto;
+    }
+}
+.publication-paragraph{
+    margin: 10px 0;
+    text-align: justify;
+}
 /* # # # # # # # # # # # # # */
 /*   G E N E R I C  C A R D  */
 /* v v v v v v v v v v v v v */
