--- a/resources/less/mod-footer.less
+++ b/resources/less/mod-footer.less
@@ -8,10 +8,19 @@
     color:@WEB_FG_COLOR;
     // box-shadow: 0px -10px 10px 0px;
 }
+#social-media-links-container{
+    padding: 10px;
+    h4{
+        margin:0 0 10px 0;
+        padding:10px;
+        border: 1px solid;
+    }
+}
+
 #social-media-links{
     display:grid;
     grid-template: auto / auto;
-    padding: 10px;
+    font-size: 15px;
 }
 .social-media-link{
     text-decoration: none;
@@ -24,6 +33,37 @@
     display: block;
     font-size: 12px;
     margin: 10px;
-    border-top: 1px solid;
+    padding: 10px;
     font-weight: 200;
+    border-top: 1px solid;
+}
+/* # # # # # # # # # # # # # */
+/* M E D I A   Q U E R I E S */
+/* v v v v v v v v v v v v v */
+@media screen and (max-width:1300px){
+    #footer-section-container{
+        max-height: 300px;
+        background-color: @WEB_BUTTON_COLOR;
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+        display: grid;
+        grid-template: minmax(auto,100px)/ repeat(12, 1fr);
+        z-index: 4;
+        align-items: baseline;
+    }
+    #social-media-links-container{
+        grid-column: 5 / 9;
+
+    }
+    #social-media-links{
+        grid-template: 1fr /  repeat(2, auto);
+        text-align: center;
+    }
+    .copyrights{
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        grid-row: 1 / 2;
+        grid-column: 1 / 4;
+    }
 }
