--- a/resources/less/mod-header.less
+++ b/resources/less/mod-header.less
@@ -36,6 +36,9 @@
     font-size: 25px !important;
     letter-spacing: 1px;
 }
+#mobile-nav-icon-container{
+    display: none;
+}
 /* # # # # # # # # # # # # # */
 /*    N A V I G A T I O N    */
 /* v v v v v v v v v v v v v */
