--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -57,6 +57,7 @@ body {
     background-position: top;
     background-color: @WEB_NAV_BG_COLOR;
     background-image: url('@{images}bg-home.png');
+    grid-row: 1 / 8;
 }
 #home-welcome-overlay {
     background-color: fade(@WEB_NAV_BG_COLOR,50%);
@@ -106,7 +107,7 @@ body {
     display: none;
 }
 
-.element-size-prop(@size) {
+.proportional-element-size(@size) {
     width: @size;
     height: @size;
 }
@@ -115,7 +116,7 @@ body {
     height: @height;
 }
 
-.image-disposition(@width: 250px, @height: 250px, @fit : cover) {
+.image-setting(@width: 250px, @height: 250px, @fit : cover) {
     width: @width;
     height: @height;
     max-height: 500px;
@@ -134,6 +135,7 @@ body {
 @import 'mod-form.less';
 @import 'mod-notification.less';
 @import 'mod-admin.less';
+@import 'media-queries.less';
 
 /* # # # # # # # # # # # # # # # #  */
 /* G E N E R I C   E L E M E N T S  */
@@ -151,12 +153,4 @@ body {
 }
 .rate {
     color: #fd4;
-}
-/* # # # # # # # # # # # # # */
-/* M E D I A   Q U E R I E S */
-/* v v v v v v v v v v v v v */
-@media screen and (max-width:1300px){
-    body{
-        grid-template:  90% auto / minmax(auto,210px) auto minmax(auto,250px) ;
-    }
 }
