--- a/resources/less/mod-about.less
+++ b/resources/less/mod-about.less
@@ -19,7 +19,7 @@
     height: 150px;
 
     img {
-        .image-disposition(150px, 150px, 'contain');
+        .image-setting(150px, 150px, 'contain');
     }
 }
 
