--- a/resources/less/mod-main.less
+++ b/resources/less/mod-main.less
@@ -5,19 +5,23 @@
     grid-column: 2 / 3;
     grid-row: 1 / 3;
     display:grid;
-    grid-template: 50px auto / auto;
-}
-#breadcrumbs{
-    grid-row: 1 / 2;
-    background-color: #0E214D;
-}
-#main-content-container{
+    grid-template: 50px auto / repeat(8, 1fr);
+    overflow-x: hidden;
     overflow-y: scroll;
+}
+#main-content-container {
+    padding: 40px;
+    margin: auto;
+    // max-width: 750px;
+    display: grid;
+    grid-template: auto auto / auto;
+    grid-row-gap: 25px;
+    overflow: hidden;
+    grid-column: 1 / 6;
 }
 .section-title {
     background: @WEB_BUTTON_COLOR;
     padding: 10px 20px;
-    margin: 0 0 10px 0;
     color: @WEB_NAV_FONT_COLOR;
     font-weight: lighter;
     /* box-shadow: 0px 1px 5px -1px #000a; */
@@ -26,6 +30,9 @@
 /*  B R E A D C R U M B S    */
 /* v v v v v v v v v v v v v */
 #breadcrumbs{
+    grid-row: 1 / 2;
+    grid-column: 1 / 10;
+    background-color: #0E214D;
     height: 50px;
     background-color: @WEB_SECTION_COLOR;
     box-shadow: -5px 0px 10px 1px fade(@WEB_NAV_BG_COLOR, 95%);
@@ -50,6 +57,3 @@
         font-size: 15px;
     }
 }
-/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-======================== M E D I A   Q U E R I E S ============================
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
