[Refactor] All components Media queries

--- a/resources/less/media-queries.less
+++ b/resources/less/media-queries.less
@@ -1,11 +1,22 @@
 /* # # # # # # # # # # # # # */
 /* M E D I A   Q U E R I E S */
 /* v v v v v v v v v v v v v */
-@media screen and (max-width:720px){
+@media screen and (min-width:280px) and (max-width:720px){
     body{
         min-width: 360px;
         display: grid;
         grid-template:  'header' 'main' 'side' 'footer';
+    }
+    #home-welcome-image {
+        #home-welcome-card{
+            width: 90%;
+        }
+        h2{
+            font-size: 25px;
+        }
+        p{
+            font-size: 20px;;
+        }
     }
 /* # # # # # # # */
 /*  H E A D E R  */
@@ -110,9 +121,11 @@
     #sidebar-ads-section-container{
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         width: 100%;
         div{
-            width: 100%;
+            width: 300px
         }
     }
 /* # # # # # # # */
@@ -120,6 +133,7 @@
 /* v v v v v v v */
     #footer-section-container{
        grid-area: footer;
+       background-color: #171717;
     }
     #social-media-links-container{
         grid-column: 5 / 9;
@@ -136,10 +150,59 @@
         grid-row: 1 / 2;
         grid-column: 1 / 4;
     }
+/* # # # # # # # */
+/*   F O R M     */
+/* v v v v v v v */
+    .form-container {
+        width: 100%;
+    }
 }
-@media screen and (min-width:720px){
+@media screen and (min-width:720px) and (max-width:1100px){
+    #home-welcome-image {
+        grid-column: 2 / 4;
+        grid-row: 1 / 3;
+    }
     #header-navigation-container{
         display: initial;
     }
+    #main-section-container{
+        grid-column: 2 / 4;
+    }
+    .project-list{
+        min-width: 450px
+    }
+    #sidebar-section-container{
+        grid-row: 2 / 3;
+        grid-column: 1/2;
 
+    }
+    #sidebar-ads-section-container{
+        display: flex;
+        flex-direction: column;
+        div{
+            width: 100%;
+        }
+    }
+    #footer-section-container{
+        grid-row: 3 / 4;
+        grid-column: 1/4;
+    }
+    #social-media-links-container{
+        div{
+            text-align: center;
+        }
+    }
+    #social-media-links{
+        display: flex;
+        justify-content: space-evenly;
+    }
+}
+@media screen and (min-width:1110px) and (max-width: 3000px){
+    #header-navigation-container{
+        display: initial ;
+    }
+    #home-welcome-image {
+        grid-column: 2 / 3;
+        grid-row: 1 / 3;
+    }
 }
