--- a/resources/less/mod-main.less
+++ b/resources/less/mod-main.less
@@ -11,7 +11,7 @@
 }
 #main-content-container {
     padding: 40px;
-    margin: auto;
+    // margin: auto;
     // max-width: 750px;
     display: grid;
     grid-template: auto auto / auto;
