--- a/resources/less/mod-portfolio.less
+++ b/resources/less/mod-portfolio.less
@@ -8,6 +8,7 @@
     grid-template: auto/auto;
     grid-row-gap: 30px;
     grid-row-gap: 30px;
+    min-width: 550px;
     li{
         margin: 0px;
         padding:0px;
