--- a/resources/less/mod-header.less
+++ b/resources/less/mod-header.less
@@ -44,8 +44,7 @@
 /* v v v v v v v v v v v v v */
 #header-navigation-container{
     grid-row: 2 / 7;
-    margin: 20px 0;
-    padding: 0 10px;
+    padding: 20px 10px;
     font-family: @WEB_NAV_FONT;
     letter-spacing: 2px;
 }
