--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -75,6 +75,21 @@ body {
     width: 50%;
     text-align: center;
 
+    opacity: 0;
+    transition-property: all;
+    transition-duration: 3s;
+    transition-delay: 1s;
+    transition-timing-function: ease;
+    animation-name: showmodal;
+    animation-duration: 2s;
+    animation-timing-function: ease;
+    animation-delay: 1s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: forwards;
+    animation-play-state: running;
+
+
     h2{
         display: block;
         font-size: 40px;
@@ -135,6 +150,7 @@ body {
 @import 'mod-notification.less';
 @import 'mod-admin.less';
 @import 'media-queries.less';
+@import 'animations.less';
 
 /* # # # # # # # # # # # # # # # #  */
 /* G E N E R I C   E L E M E N T S  */
