--- a/resources/less/utilities/media-queries.less
+++ b/resources/less/utilities/media-queries.less
@@ -2,11 +2,11 @@
 /* M E D I A   Q U E R I E S */
 /* v v v v v v v v v v v v v */
 @media screen and (min-width:280px) and (max-width:720px){
-    body{
-        min-width: 360px;
-        display: grid;
-        grid-template:  'header' 'main' 'side' 'footer';
-    }
+    // body{
+    //     min-width: 360px;
+    //     display: grid;
+    //     grid-template:  'header' 'main' 'side' 'footer';
+    // }
     #home-welcome-image {
         #home-welcome-card{
             width: 90%;
