--- a/resources/less/components/main.less
+++ b/resources/less/components/main.less
@@ -6,8 +6,8 @@
     grid-row: 1 / 3;
     display:grid;
     grid-template: 50px auto / repeat(8, 1fr);
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
+
 }
 #main-content-container {
     padding: 40px;
@@ -16,8 +16,10 @@
     display: grid;
     grid-template: auto auto / auto;
     grid-row-gap: 25px;
-    overflow: hidden;
     grid-column: 1 / 6;
+    overflow-y: scroll;
+    scrollbar-track-color: khaki;
+
 }
 .section-title {
     background: @WEB_BUTTON_COLOR;
