[RFTOR] Html & Less Files Structure

--- a/resources/less/common/mixins.less
+++ b/resources/less/common/mixins.less
@@ -1,3 +1,10 @@
+.panel-primary{
+    background-color: @primary ;
+
+}
+.panel-secondary{
+    background-color: @complementary_two;
+}
 .hidden {
     display: none;
 }
