--- a/resources/less/components/publication.less
+++ b/resources/less/components/publication.less
@@ -2,7 +2,7 @@
 /*   P U B L I C A T I O N   */
 /* v v v v v v v v v v v v v */
 .publication-container{
-    background: @WEB_CARD_BG;
+    // background: @WEB_CARD_BG;
     padding: 20px;
 }
 .publication-img-container{
@@ -22,7 +22,7 @@
 .publication-card-container {
     display: grid;
     grid-template: 1fr auto / auto 1fr;
-    background: @WEB_CARD_BG;
+    // background: @WEB_CARD_BG;
     padding: 10px;
 }
 .latest-publication-card-img-container{
@@ -65,11 +65,11 @@
     grid-column: 1 / 3;
     padding: 10px;
     margin: 10px 0 0 0;
-    background-color: @WEB_SECTION_COLOR;
+    // background-color: @WEB_SECTION_COLOR;
     text-align: center;
     a{
         text-decoration:none;
-        color: @WEB_BUTTON_COLOR;
+        // color: @WEB_BUTTON_COLOR;
     }
     a:hover{
         text-decoration: underline;
