--- a/resources/less/layouts/public.less
+++ b/resources/less/layouts/public.less
@@ -1,12 +1,5 @@
 .public-layout {
-    margin: 0px;
-    padding: 0px;
-    height: 100vh;
-    width: 100vw;
     display: grid;
     grid-template:  1fr auto / minmax(auto,210px) auto minmax(auto,250px) ;
-    font-family: @base-font-family, sans-serif;
-    // background-image: url('@{images}bg-graphics.png');
-    min-width: 320px;
-    background-color: @WEB_BG_COLOR;
+    height: inherit;
 }
