--- a/resources/less/common/media-queries.less
+++ b/resources/less/common/media-queries.less
@@ -49,7 +49,7 @@
         position: absolute;
         top: 0;
         right: 0;
-        background:  @WEB_NAV_BG_COLOR;
+        // background:  @WEB_NAV_BG_COLOR;
         padding: 20px;
         border-radius: 50%;
         img{
