--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -1,25 +1,29 @@
 @import './layouts/body.less';
 @import './layouts/public.less';
+@import './layouts/header.less';
+@import './layouts/main.less';
+@import './layouts/footer.less';
+@import './layouts/sidebar.less';
 
-@import './utilities/all.css';
-@import './utilities/animations.less';
-@import './utilities/media-queries.less';
-@import './utilities/mixins.less';
-@import './utilities/variables.less';
+// @import './utilities/all.css';
 
-@import './components/header.less';
-@import './components/main.less';
+// @import './utilities/animations.less';
+@import './common/mixins.less';
+@import './common/media-queries.less';
+@import './common/variables.less';
+// @import './common/generics.less';
+
+@import './components/logotype.less';
+@import './components/navigation.less';
+@import './components/home.less';
 @import './components/publication.less';
-@import './components/post.less';
-@import './components/portfolio.less';
-@import './components/sidebar.less';
-@import './components/footer.less';
-@import './components/rating.less';
-@import './components/about.less';
-@import './components/form.less';
-@import './components/notification.less';
-@import './components/admin.less';
-@import './components/animations.less';
+// @import './components/post.less';
+// @import './components/portfolio.less';
+// @import './components/rating.less';
+// @import './components/about.less';
+// @import './components/form.less';
+// @import './components/notification.less';
+// @import './components/admin.less';
 
 .tag {
     display: inline-block;
