--- a/resources/less/layouts/body.less
+++ b/resources/less/layouts/body.less
@@ -1,28 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit&family=Orbitron:wght@600&display=swap');
 
 body {
-    margin: 0px;
-    padding: 0px;
+    overflow: hidden;
     height: 100vh;
     width: 100vw;
-    display: grid;
-    grid-template:  1fr auto / minmax(auto,210px) auto minmax(auto,250px) ;
-    font-family: @base-font-family, sans-serif;
-    // background-image: url('@{images}bg-graphics.png');
     min-width: 320px;
-    background-color: @WEB_BG_COLOR;
+    font-size: @base_font_size;
+    font-family: @web_font_family;
+
+
+    h1{
+        font-size: @parent_heading_size;
+    }
+    h2{
+        font-size: @heading_size;
+    }
+    h3{
+        font-size: @sub_heading_size;
+    }
+    h4{
+        font-size: @annotation_size
+    }
+    h5{
+        font-size: @sub_annotation_size;
+    }
+    h6{
+        font-size: @child_annotation_size
+    }
 }
 
-
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p,
-    ul,
-    li {
-        margin: 0;
-        padding: 0;
-    }
+body, h1, h2, h3, h4, h5, h6, p, ul, li{
+    margin: 0;
+    padding: 0;
+}
