--- a/resources/less/layouts/footer.less
+++ b/resources/less/layouts/footer.less
@@ -4,8 +4,8 @@
 #footer-section-container {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    background-color: @WEB_NAV_BG_COLOR;
-    color:@WEB_FG_COLOR;
+    // background-color: @WEB_NAV_BG_COLOR;
+    // color:@WEB_FG_COLOR;
     // box-shadow: 0px -10px 10px 0px;
 }
 #social-media-links-container{
