--- a/resources/less/layouts/main.less
+++ b/resources/less/layouts/main.less
@@ -22,9 +22,9 @@
 
 }
 .section-title {
-    background: @WEB_BUTTON_COLOR;
+    // background:
     padding: 10px 20px;
-    color: @WEB_NAV_FONT_COLOR;
+    // color: @WEB_NAV_FONT_COLOR;
     font-weight: lighter;
     /* box-shadow: 0px 1px 5px -1px #000a; */
 }
@@ -36,8 +36,8 @@
     grid-column: 1 / 10;
     background-color: #0E214D;
     height: 50px;
-    background-color: @WEB_SECTION_COLOR;
-    box-shadow: -5px 0px 10px 1px fade(@WEB_NAV_BG_COLOR, 95%);
+    // background-color: @WEB_SECTION_COLOR;
+    // box-shadow: -5px 0px 10px 1px fade(@WEB_NAV_BG_COLOR, 95%);
 }
 #web-back-icon-container{
     display: flex;
@@ -47,7 +47,7 @@
         text-decoration: none;
     }
     div{
-        background-image: url('@{icons}web-back-icon.svg');
+        // background-image: url('@{icons}web-back-icon.svg');
         background-size: 30px 30px;
         background-repeat: no-repeat;
         width:30px;
@@ -55,7 +55,7 @@
     }
     h2{
         margin: 0 5px;
-        color: @WEB_NAV_BG_COLOR;
+        // color: @WEB_NAV_BG_COLOR;
         font-size: 15px;
     }
 }
