--- a/resources/less/layouts/sidebar.less
+++ b/resources/less/layouts/sidebar.less
@@ -2,8 +2,8 @@
 #sidebar-section-container{
     grid-column: 3 / 4;
     grid-row: 1 / 3;
-    background-image: url('@{images}bg-graphics.png');
-    background-color: @WEB_NAV_BG_COLOR;
+    // background-image: url('@{images}bg-graphics.png');
+    // background-color: @WEB_NAV_BG_COLOR;
     display:grid;
     grid-template: auto / 1fr;
     position: sticky;
@@ -13,7 +13,7 @@
     grid-template: 90px 150px 150px / auto;
     grid-row-gap: 10px;
 
-    color: @WEB_NAV_FONT_COLOR;
+    // color: @WEB_NAV_FONT_COLOR;
     padding: 20px;
     div{
         width: 200px;
